Fixed a small alignment issue on profile page

--- a/frontend/src/Pages/Profile.css
+++ b/frontend/src/Pages/Profile.css
@@ -107,7 +107,7 @@
     border: solid;
     padding-left: 15px;
     border-radius: 10px;
-    width: 500px;
+    width: 488px;
     height: 340px;
 }
 
